--- a/src/Palette.css
+++ b/src/Palette.css
@@ -6,7 +6,7 @@
     height: 90%;
 }
 
-.slider{
+/* .slider{
     width: 340px;
     margin: 0 10px;
     display: inline-block;
@@ -33,4 +33,4 @@
     height: 13px;
     margin-left: -7px;
     margin-top: -3px;
-}
+} */
