--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -6,21 +6,21 @@
     position: relative;
     cursor: pointer;
     margin-bottom: -3.5px;
-}
+} */
 
-.SingleColorBox .ColorBox {
+/* .SingleColorBox .ColorBox {
     height: 50%;
-}
+} */
 
-.ColorBox.go-back {
+/* .ColorBox.go-back {
     background-color: black;
     color: white;
-}
+} */
 
 /* a {
     text-decoration: none;
 } */
-
+/* 
 .copy-button, 
 .back-button {
     width: 100px;
@@ -42,18 +42,18 @@
     text-decoration: none;
     /* cursor: pointer; */
     
-}
+/* } */ 
 
-.copy-button {
+/* .copy-button {
     opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
     opacity: 1;
     transition: 0.5s;
-}
+} */
 
-.box-content {
+/* .box-content {
     position: absolute;
     width: 100%;
     left: 0px;
@@ -63,9 +63,9 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
-}
+} */
 
-.see-more {
+/* .see-more {
     position: absolute;
     right: 0px;
     bottom: 0px;
@@ -77,26 +77,26 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
     transition: transform 0.6s ease-in-out;
     transform: scale(0.1);
-}
+} */
 
-.copy-overlay.show {
+/* .copy-overlay.show {
     opacity: 1;
     transform: scale(50);
     z-index: 10;
     position: absolute;
     
-}
+} */
 
-.copy-msg {
+/* .copy-msg {
     position: fixed;
     top: 0;
     left: 0;
@@ -110,18 +110,18 @@
     transform: scale(0.1);
     color: white;
     /* transition: transform 0.6s ease-in-out; */
-    opacity: 0;
-}
+    /* opacity: 0; */
+/* }  */
 
-.copy-msg.show {
+/* .copy-msg.show {
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all 0.4s ease-in-out;
     transition-delay: 0.3s;
-}
+} */
 
-.copy-msg h1 {
+/* .copy-msg h1 {
     font-weight: 400;
     text-shadow: 1px 2px black;
     background: rgba(255, 255, 255, 0.3);
@@ -135,4 +135,4 @@
 .copy-msg p {
     font-size: 2rem;
     font-weight: 100;
-}
+} */
